[package]
name = "block-sceen"
version = "0.1.0"
authors = ["Artem <artem@webart-tech.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0"
gtk = "0.8.1"
gio = "0.8.1"
gdk = "0.12.1"
glib = "0.9.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

